<resources>
    <string name="app_name">FinalProject</string>

    <string-array name="rangeSliderPrice">
        <item>500</item>
        <item>10000</item>
    </string-array>

    <string-array name="rangeSliderRating">
        <item>0</item>
        <item>5</item>
    </string-array>

    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Cakes</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>

    <string name="emailIsEmpty">Please enter Email field!</string>
    <string name="passwordIsEmpty">Please enter Password field!</string>
    <string name="firstNameIsEmpty">Please enter First Name field!</string>
    <string name="lastNameIsEmpty">Please enter Last Name field!</string>
    <string name="confirmPasswordIsEmpty">Please enter Confirm Password field!</string>
    <string name="passwordNotEqual">Password and Confirm Password are not equal!</string>
    <string name="successSignUp">Successfully Sign Up user!</string>
    <string name="successLogIn">Successfully Log In!</string>


</resources>