<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SignUpActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/purple_500"
        android:textSize="@dimen/name_title_size"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02" />

    <EditText
        android:id="@+id/firstName"
        android:hint="@string/first_name"
        android:layout_width="@dimen/width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:textColor="@color/purple_700"
        android:textColorHint="@color/purple_700"
        android:background="@drawable/edittext_bg"
        android:padding="@dimen/padding"
        android:textSize="@dimen/button_text_size"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/lastName"
        android:hint="@string/last_name"
        android:layout_width="@dimen/width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:textColor="@color/purple_700"
        android:textColorHint="@color/purple_700"
        android:background="@drawable/edittext_bg"
        android:padding="@dimen/padding"
        android:textSize="@dimen/button_text_size"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/email"
        android:hint="@string/email"
        android:layout_width="@dimen/width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:textColor="@color/purple_700"
        android:textColorHint="@color/purple_700"
        android:background="@drawable/edittext_bg"
        android:padding="@dimen/padding"
        android:textSize="@dimen/button_text_size"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastName"
        tools:layout_editor_absoluteX="0dp" />

    <EditText
        android:id="@+id/password"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="@dimen/width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:textColor="@color/purple_700"
        android:textColorHint="@color/purple_700"
        android:background="@drawable/edittext_bg"
        android:padding="@dimen/padding"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/confirmPassword"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:layout_width="@dimen/width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:textColor="@color/purple_700"
        android:textColorHint="@color/purple_700"
        android:background="@drawable/edittext_bg"
        android:padding="@dimen/padding"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="@dimen/width"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top"
        android:text="@string/sign_up"
        android:paddingHorizontal="25dp"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmPassword"/>


    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/desc_text_size"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.922"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signUpButton" />

</androidx.constraintlayout.widget.ConstraintLayout>